--- a/show.html
+++ b/show.html
@@ -1,12 +1,13 @@
 <html>
-    
-    
   <head>
- <title>to do list</title>     
-  </head> Walk the dog
- <body>create reminder
-    list of events
-  recieve a reminder
-check off list
-
+    <title>Todo List Application</title>
+  </head>
+  <body>
+    <input type="checkbox">
+    <h2>walk the dog</h2>
+    <a href="#">Edit</a>
+    <a href="#">Delete</a>
+    <a href="index.html">Go back...</a>
+  </body>
+  
 </html>
