--- a/show.html
+++ b/show.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+      <head>
+  <link rel="stylesheet" href="show.css">
+</head>
+
     <title>Todo List Application</title>
   </head>
   <body>
