--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
  <title>to do list</title>     
   </head> 
  <body>
-     <h1>Hello</h1>
+     <h1>Green owl todo list</h1>
      <p1>The best to do list out.</p1>
     <ul>
-        <li> <input type="checkbox">
+        <li class="list-item"> <input type="checkbox">
         <a href="show.html">walk the dog</a></a>
         </li>
             
-    <li><input type="checkbox">
+    <li class="list-item"><input type="checkbox">
      <a href="show.html"> do the dishes</a></li>
-  <li><input type="checkbox">
+  <li class="list-item"><input type="checkbox">
    <a href="show.html">get the mail</a></li>
-<li><input type="checkbox">
+<li class="list-item"><input type="checkbox">
  <a href="show.html"> have fun</a></li> 
 </ul> 
 <input type="text" placeholder="add a to do">
