--- a/show.html
+++ b/show.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input type="checkbox">
-    <h2>walk the dog</h2>
+    <h2 class="showtitle">walk the dog</h2>
     <a href="#">Edit</a>
     <a href="#">Delete</a>
     <a href="index.html">Go back...</a>
