--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css" type="text/css" />
+        <img src="https://i.pinimg.com/236x/3b/4d/d2/3b4dd2fcc9d1a66b3ea9b8c467a1cbad--cute-owl-clipart.jpg"
+        width="50" height="45"></img>
  <title>to do list</title>     
   </head> 
  <body>
